--- a/po/ar.po
+++ b/po/ar.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OBH enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2019-04-12 12:36+0300\n"
 "Last-Translator: mosad - مساعد الجعيد <abo-mishal@hotmail.com>\n"
 "Language-Team: mosad - مساعد الجعيد\n"
@@ -179,10 +179,6 @@ msgstr "%a %d/%m"
 #, fuzzy
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e %b  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -10613,6 +10609,14 @@ msgstr "توفالو"
 msgid "Two"
 msgstr "اثنين"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "سطرين"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "الانتقال إلى الحدث التالي"
+
 msgid "Type"
 msgstr "النوع"
 
@@ -12947,14 +12951,6 @@ msgstr "السياحة/السفر"
 
 msgid "true"
 msgstr "صحيح"
-
-#, fuzzy
-msgid "two lines"
-msgstr "سطرين"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "الانتقال إلى الحدث التالي"
 
 msgid "type"
 msgstr "نوع"
