--- a/po/bg.po
+++ b/po/bg.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2023-11-11 09:42+0200\n"
 "Last-Translator: Мартин Петков <marto74bg@yahoo.co.uk>\n"
 "Language-Team: Bulgarian\n"
@@ -169,10 +169,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-Ч:%М"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -9842,6 +9838,14 @@ msgstr "Тувалу"
 msgid "Two"
 msgstr "Два"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Два реда"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Два реда и следващото събитие"
+
 msgid "Type"
 msgstr "Тип"
 
@@ -12029,14 +12033,6 @@ msgstr "туризъм/пътешествия"
 
 msgid "true"
 msgstr "да"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Два реда"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Два реда и следващото събитие"
 
 msgid "type"
 msgstr "тип"
