--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: IMS <ims@openpli.org>\n"
 "Language-Team: PLi <ims@openpli.org>\n"
@@ -181,10 +181,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -11336,6 +11332,15 @@ msgid "Two"
 msgstr "Dva"
 
 #
+#, fuzzy
+msgid "Two lines"
+msgstr "Dva řádky"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Dva řádky a další událost"
+
+#
 msgid "Type"
 msgstr "Typ"
 
@@ -13806,15 +13811,6 @@ msgstr "turistika/cestování"
 #
 msgid "true"
 msgstr "ano"
-
-#
-#, fuzzy
-msgid "two lines"
-msgstr "Dva řádky"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Dva řádky a další událost"
 
 msgid "type"
 msgstr "typ"
