--- a/po/da.po
+++ b/po/da.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2017-01-18 16:38+0100\n"
 "Last-Translator: lupine <a_ecklon@hotmail.com>\n"
 "Language-Team: \n"
@@ -183,10 +183,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -11383,6 +11379,15 @@ msgid "Two"
 msgstr "To"
 
 #
+#, fuzzy
+msgid "Two lines"
+msgstr "Vis infoinje"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Gå til næste udsendelse"
+
+#
 msgid "Type"
 msgstr "Type"
 
@@ -13874,15 +13879,6 @@ msgstr "turisme/rejse"
 
 msgid "true"
 msgstr "rigtig"
-
-#
-#, fuzzy
-msgid "two lines"
-msgstr "Vis infoinje"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Gå til næste udsendelse"
 
 #, fuzzy
 msgid "type"
