--- a/po/de.po
+++ b/po/de.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2023-06-19 13:16+0200\n"
 "Last-Translator: kueken\n"
 "Language-Team: OpenPLi\n"
@@ -170,10 +170,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -9889,6 +9885,14 @@ msgstr "Tuvalu"
 msgid "Two"
 msgstr "Zwei"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Zweizeilig"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Zweizeilig und nächste Sendung"
+
 msgid "Type"
 msgstr "Typ"
 
@@ -12085,14 +12089,6 @@ msgstr "Tourismus/Reisen"
 
 msgid "true"
 msgstr "Ja"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Zweizeilig"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Zweizeilig und nächste Sendung"
 
 msgid "type"
 msgstr "typ"
