--- a/po/el.po
+++ b/po/el.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLI Enigma2 Official Greek Translation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: MCelliotG <mcelliotg@gmail.com>\n"
 "Language-Team: MCelliotG <mcelliotg@gmail.com>\n"
@@ -170,10 +170,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -9864,6 +9860,14 @@ msgstr "Τουβαλού"
 msgid "Two"
 msgstr "Δύο"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Δύο γραμμές"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Δύο γραμμές και επόμενο πρόγραμμα"
+
 msgid "Type"
 msgstr "Τύπος"
 
@@ -12052,14 +12056,6 @@ msgstr "τουρισμός/ταξίδια"
 
 msgid "true"
 msgstr "αληθές"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Δύο γραμμές"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Δύο γραμμές και επόμενο πρόγραμμα"
 
 msgid "type"
 msgstr "τύπος"
