--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: satdreamgr\n"
 "Language-Team: \n"
@@ -168,10 +168,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -10055,6 +10051,14 @@ msgstr ""
 msgid "Two"
 msgstr "Two"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Show info line"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Go to next event"
+
 msgid "Type"
 msgstr "Type"
 
@@ -12286,14 +12290,6 @@ msgstr "tourism/travel"
 
 msgid "true"
 msgstr "true"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Show info line"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Go to next event"
 
 #, fuzzy
 msgid "type"
