--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2022-10-13 18:28+0200\n"
 "Last-Translator: Jose Juan <jzapater@gmail.com>\n"
 "Language-Team: ANGELODOS  angelo2807@hotmail.com\n"
@@ -182,10 +182,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -11014,6 +11010,16 @@ msgid "Two"
 msgstr "Dos"
 
 #
+#, fuzzy
+msgid "Two lines"
+msgstr "Dos lineas"
+
+#
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Dos líneas y próximo evento"
+
+#
 msgid "Type"
 msgstr "Tipo"
 
@@ -13430,16 +13436,6 @@ msgstr "Turismo / viajes"
 
 msgid "true"
 msgstr "cierto"
-
-#
-#, fuzzy
-msgid "two lines"
-msgstr "Dos lineas"
-
-#
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Dos líneas y próximo evento"
 
 msgid "type"
 msgstr "tipo"
