--- a/po/et.po
+++ b/po/et.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Openpli\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2019-04-03 06:49+0300\n"
 "Last-Translator: \n"
 "Language-Team: Raivo, Henkka, eesatfan, rimas, zeros\\n faas, sateks, valgekotkas, tigekala, rootsikunn\\n kain, i70, mustkass, pelmeen, Scott\\n <digi-tv.ee>\n"
@@ -172,10 +172,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -10051,6 +10047,14 @@ msgstr "Tuvalu"
 msgid "Two"
 msgstr "Kaks"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Näita infot"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Mine järgmisele saatele"
+
 msgid "Type"
 msgstr "Tüüp"
 
@@ -12299,14 +12303,6 @@ msgstr "turism/reisimine"
 
 msgid "true"
 msgstr "tõene"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Näita infot"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Mine järgmisele saatele"
 
 msgid "type"
 msgstr "tüüp"
