--- a/po/fi.po
+++ b/po/fi.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2020-05-16 18:41+0200\n"
 "Last-Translator: jamu\n"
 "Language-Team: BoxFreak/jamu\n"
@@ -183,10 +183,6 @@ msgstr "%a %e.%-m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e.%-m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -11170,6 +11166,15 @@ msgid "Two"
 msgstr "Kaksi"
 
 #
+#, fuzzy
+msgid "Two lines"
+msgstr "Näytä tietopalkki"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Mene seuraavaan ohjelmaan"
+
+#
 msgid "Type"
 msgstr "Tyyppi"
 
@@ -13620,15 +13625,6 @@ msgstr "turismi/matkailu"
 
 msgid "true"
 msgstr "tosi"
-
-#
-#, fuzzy
-msgid "two lines"
-msgstr "Näytä tietopalkki"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Mene seuraavaan ohjelmaan"
 
 #, fuzzy
 msgid "type"
