--- a/po/fr.po
+++ b/po/fr.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
-"PO-Revision-Date: 2023-12-16 10:07+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
+"PO-Revision-Date: 2023-12-17 11:26+0100\n"
 "Last-Translator: Pr2\n"
 "Language-Team: french\n"
 "Language: fr\n"
@@ -169,10 +169,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -9041,7 +9037,7 @@ msgstr ""
 "\n"
 "Support: https://www.openpli.org/\n"
 "Traducteur: Pr2\n"
-"Dernière MÀJ: 08-11-2023"
+"Dernière MÀJ: 17-12-2023"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "Fichier TS trop grand pour le niveau 1 ISO9660!"
@@ -9860,6 +9856,12 @@ msgstr "Tuvalu"
 
 msgid "Two"
 msgstr "Deux"
+
+msgid "Two lines"
+msgstr "Deux lignes"
+
+msgid "Two lines and next event"
+msgstr "Deux lignes et l’événement suivant"
 
 msgid "Type"
 msgstr "Type"
@@ -12052,12 +12054,6 @@ msgstr "Tourisme/Voyages"
 
 msgid "true"
 msgstr "Vrai"
-
-msgid "two lines"
-msgstr "deux lignes"
-
-msgid "two lines+next event"
-msgstr "deux lignes+prochain événement"
 
 msgid "type"
 msgstr "type"
