--- a/po/fy.po
+++ b/po/fy.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2008-12-29 16:22+0100\n"
 "Last-Translator: gerrit <gerrit@nedlinux.nl>\n"
 "Language-Team: gerrit <fy@li.org>\n"
@@ -179,10 +179,6 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
-msgstr ""
-
-#, python-format
-msgid "%d"
 msgstr ""
 
 #, python-format
@@ -11462,6 +11458,16 @@ msgid "Two"
 msgstr "Twa"
 
 #
+#, fuzzy
+msgid "Two lines"
+msgstr "Infolyne sjen litte"
+
+#
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Nei it folgende menu item gean"
+
+#
 msgid "Type"
 msgstr ""
 
@@ -13901,16 +13907,6 @@ msgstr ""
 
 msgid "true"
 msgstr ""
-
-#
-#, fuzzy
-msgid "two lines"
-msgstr "Infolyne sjen litte"
-
-#
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Nei it folgende menu item gean"
 
 #
 #, fuzzy
