--- a/po/gl.po
+++ b/po/gl.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2021-10-16 21:21+0200\n"
 "Last-Translator: Luis A. Martínez <luis.a.martinez@gmail.com>\n"
 "Language-Team: LAMS\n"
@@ -181,10 +181,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -11067,6 +11063,16 @@ msgid "Two"
 msgstr "Dous"
 
 #
+#, fuzzy
+msgid "Two lines"
+msgstr "Dúas liñas"
+
+#
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Dúas liñas e seguinte evento"
+
+#
 msgid "Type"
 msgstr "Tipo"
 
@@ -13509,16 +13515,6 @@ msgstr "turismo/viaxes"
 
 msgid "true"
 msgstr "verdadeiro"
-
-#
-#, fuzzy
-msgid "two lines"
-msgstr "Dúas liñas"
-
-#
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Dúas liñas e seguinte evento"
 
 msgid "type"
 msgstr "tipo"
