--- a/po/he.po
+++ b/po/he.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2012-03-08 10:40+0330\n"
 "Last-Translator: \n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -179,10 +179,6 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
-msgstr ""
-
-#, python-format
-msgid "%d"
 msgstr ""
 
 #, python-format
@@ -10823,6 +10819,14 @@ msgstr ""
 msgid "Two"
 msgstr "שתיים"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "show Infoline"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "move down to next entry"
+
 #
 msgid "Type"
 msgstr "סוג"
@@ -13120,14 +13124,6 @@ msgstr ""
 
 msgid "true"
 msgstr ""
-
-#, fuzzy
-msgid "two lines"
-msgstr "show Infoline"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "move down to next entry"
 
 #
 #, fuzzy
