--- a/po/hr.po
+++ b/po/hr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2022-03-28 16:33+0200\n"
 "Last-Translator: Željko <zdezmar2@gmail.com>\n"
 "Language-Team: Željko\n"
@@ -170,10 +170,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -9929,6 +9925,14 @@ msgstr "Tuvalu"
 msgid "Two"
 msgstr "Dva"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Dvije linije"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Dvije linije i sljedeći događaj"
+
 msgid "Type"
 msgstr "Tip"
 
@@ -12125,14 +12129,6 @@ msgstr "turizam/putovanja"
 
 msgid "true"
 msgstr "istinit"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Dvije linije"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Dvije linije i sljedeći događaj"
 
 msgid "type"
 msgstr "tip"
