--- a/po/hu.po
+++ b/po/hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2021-11-03 15:10+0100\n"
 "Last-Translator: mcfly82\n"
 "Language-Team: mcfly82 & wysless\n"
@@ -169,10 +169,6 @@ msgstr "%m. %e %a"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%m. %e %a  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -9926,6 +9922,14 @@ msgstr "Tuvalu"
 msgid "Two"
 msgstr "Kettő"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Két sor"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Két sor és a következő esemény"
+
 msgid "Type"
 msgstr "Típus"
 
@@ -12137,14 +12141,6 @@ msgstr "turizmus/utazás"
 
 msgid "true"
 msgstr "igaz"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Két sor"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Két sor és a következő esemény"
 
 msgid "type"
 msgstr "típus"
