--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2021-03-06\n"
 "Last-Translator: LinuxSTV\n"
 "Language-Team: \n"
@@ -174,10 +174,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -10227,6 +10223,14 @@ msgstr "Tuvalu"
 msgid "Two"
 msgstr "Dua"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Tampilkan baris info"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Menuju acara berikutnya"
+
 msgid "Type"
 msgstr "Jenis"
 
@@ -12496,14 +12500,6 @@ msgstr "tourism/travel"
 
 msgid "true"
 msgstr "benar"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Tampilkan baris info"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Menuju acara berikutnya"
 
 #, fuzzy
 msgid "type"
