--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi-enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2020-05-16 18:46+0200\n"
 "Last-Translator: Gringo <openpli@tiscali.it>\n"
 "Language-Team: www.linsat.net <spaeleus@croci.org>\n"
@@ -178,10 +178,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -10000,6 +9996,14 @@ msgstr "Tuvalu"
 msgid "Two"
 msgstr "Due"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Mostrare la riga di informazioni"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Andare all'evento successivo"
+
 msgid "Type"
 msgstr "Tipo"
 
@@ -12232,14 +12236,6 @@ msgstr "Viaggi/Turismo"
 
 msgid "true"
 msgstr "Vero"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Mostrare la riga di informazioni"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Andare all'evento successivo"
 
 msgid "type"
 msgstr "Tipo"
