--- a/po/lt.po
+++ b/po/lt.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2022-10-23 15:37+0300\n"
 "Last-Translator: Audronis <adga45@gmail.com>\n"
 "Language-Team: Adga (C) <adga45@gmail.com>\n"
@@ -170,10 +170,6 @@ msgstr "%m/%e %a"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%m/%e %a  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -9894,6 +9890,14 @@ msgstr "Tuvalu"
 msgid "Two"
 msgstr "Du"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Dvi linijos"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Dvi eilutės ir kitas įvykis"
+
 msgid "Type"
 msgstr "Tipas"
 
@@ -12086,14 +12090,6 @@ msgstr "turizmas, kelionės"
 
 msgid "true"
 msgstr "tiesa"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Dvi linijos"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Dvi eilutės ir kitas įvykis"
 
 msgid "type"
 msgstr "tipas"
