--- a/po/lv.po
+++ b/po/lv.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2014-11-12 00:49+0200\n"
 "Last-Translator: Taapat <taapat@gmail.com>\n"
 "Language-Team: Taapat <taapat@gmail.com>\n"
@@ -171,10 +171,6 @@ msgstr "%a %e.%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e.%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -9887,6 +9883,14 @@ msgstr "Tuvalu"
 msgid "Two"
 msgstr "Divi"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Divas rindas"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Divas rindas un nākamais notikums"
+
 msgid "Type"
 msgstr "Veids"
 
@@ -12077,14 +12081,6 @@ msgstr "tūrisma/ceļošana"
 
 msgid "true"
 msgstr "patiesība"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Divas rindas"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Divas rindas un nākamais notikums"
 
 msgid "type"
 msgstr "veids"
