--- a/po/mk.po
+++ b/po/mk.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2021-02-19 14:49+0100\n"
 "Last-Translator: \n"
 "Language-Team: Muzoss-VELEBRDO\n"
@@ -170,10 +170,6 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
-msgstr ""
-
-#, python-format
-msgid "%d"
 msgstr ""
 
 #, python-format
@@ -9919,6 +9915,14 @@ msgstr "Тувалу"
 msgid "Two"
 msgstr "Два"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Две реда"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Две реда и следен настан"
+
 msgid "Type"
 msgstr "Тип"
 
@@ -12134,14 +12138,6 @@ msgstr "туризам / патување"
 
 msgid "true"
 msgstr "точно"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Две реда"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Две реда и следен настан"
 
 msgid "type"
 msgstr "тип"
