--- a/po/nb.po
+++ b/po/nb.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2023-01-01 16:49+0100\n"
 "Last-Translator: GeirJ <dummy@dummy.com>\n"
 "Language-Team: GeirJ\n"
@@ -182,10 +182,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -10978,6 +10974,15 @@ msgid "Two"
 msgstr "To"
 
 #
+#, fuzzy
+msgid "Two lines"
+msgstr "To linjer"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "To linjer og neste program"
+
+#
 msgid "Type"
 msgstr "Type"
 
@@ -13372,15 +13377,6 @@ msgstr "turisme/reise"
 
 msgid "true"
 msgstr "sant"
-
-#
-#, fuzzy
-msgid "two lines"
-msgstr "To linjer"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "To linjer og neste program"
 
 msgid "type"
 msgstr "type"
