--- a/po/pl.po
+++ b/po/pl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2023-04-08 10:03+0200\n"
 "Last-Translator: pololoko111 <pololoko111@o2.pl>\n"
 "Language-Team: \n"
@@ -168,10 +168,6 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
-msgstr ""
-
-#, python-format
-msgid "%d"
 msgstr ""
 
 #, python-format
@@ -9937,6 +9933,14 @@ msgstr ""
 msgid "Two"
 msgstr "Dwa"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Dwie linie"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Dwie linie i następne wydarzenie"
+
 msgid "Type"
 msgstr "Typ"
 
@@ -12136,14 +12140,6 @@ msgstr "Podróże/Turystyka"
 
 msgid "true"
 msgstr "tak"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Dwie linie"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Dwie linie i następne wydarzenie"
 
 msgid "type"
 msgstr "typ "
