--- a/po/pt.po
+++ b/po/pt.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2014-12-15 19:38-0000\n"
 "Last-Translator: Phenom <phenomxy@gmail.com>\n"
 "Language-Team: Muaitai <muaitai@gmail.com>\n"
@@ -179,10 +179,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -11582,6 +11578,15 @@ msgid "Two"
 msgstr "Dois"
 
 #
+#, fuzzy
+msgid "Two lines"
+msgstr "Mostrar linha de informação"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Ir para o programa seguinte"
+
+#
 msgid "Type"
 msgstr "Tipo"
 
@@ -14097,15 +14102,6 @@ msgstr "turismo/viagens"
 
 msgid "true"
 msgstr "verdadeiro"
-
-#
-#, fuzzy
-msgid "two lines"
-msgstr "Mostrar linha de informação"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Ir para o programa seguinte"
 
 #, fuzzy
 msgid "type"
