--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2013-10-20 19:13-0300\n"
 "Last-Translator: Diogo <pingflood@gmail.com>\n"
 "Language-Team: Traduzido por Frank Viana <franksrviana@gmail.com>\n"
@@ -171,10 +171,6 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
-msgstr ""
-
-#, python-format
-msgid "%d"
 msgstr ""
 
 #, python-format
@@ -10049,6 +10045,14 @@ msgstr ""
 msgid "Two"
 msgstr "Dois"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Exibir linha de informações"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Ir para o próximo evento"
+
 msgid "Type"
 msgstr "Tipo"
 
@@ -12287,14 +12291,6 @@ msgstr "Turismo/Viagens"
 
 msgid "true"
 msgstr "Verdadeiro"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Exibir linha de informações"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Ir para o próximo evento"
 
 #, fuzzy
 msgid "type"
