--- a/po/ro.po
+++ b/po/ro.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2010-03-09 21:03+0100\n"
 "Last-Translator: \n"
 "Language-Team: HDTV ROMANIA(superonic,costel_mbc,neutrin,otheitis,cipy_1982,neutrin,runcanion)\n"
@@ -168,10 +168,6 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
-msgstr ""
-
-#, python-format
-msgid "%d"
 msgstr ""
 
 #, python-format
@@ -10233,6 +10229,14 @@ msgstr ""
 msgid "Two"
 msgstr "Doi"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "arata Infoline"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "muta jos la urmatoarea intrare"
+
 msgid "Type"
 msgstr "Tip"
 
@@ -12432,14 +12436,6 @@ msgstr ""
 
 msgid "true"
 msgstr ""
-
-#, fuzzy
-msgid "two lines"
-msgstr "arata Infoline"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "muta jos la urmatoarea intrare"
 
 #, fuzzy
 msgid "type"
