--- a/po/ru.po
+++ b/po/ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2021-05-24 17:48+0300\n"
 "Last-Translator: Dimitrij <Dima-73@inbox.lv>\n"
 "Language-Team: openPLi Dimitrij\n"
@@ -169,10 +169,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -9889,6 +9885,14 @@ msgstr "Tuvalu"
 msgid "Two"
 msgstr "Два"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Две строки"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Две строки и следующее событие"
+
 msgid "Type"
 msgstr "Тип"
 
@@ -12078,14 +12082,6 @@ msgstr "туризм/путешествия"
 
 msgid "true"
 msgstr "да"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Две строки"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Две строки и следующее событие"
 
 msgid "type"
 msgstr "тип"
