--- a/po/sk.po
+++ b/po/sk.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2023-11-10 14:18+0100\n"
 "Last-Translator: Andrej Tobola <andrej.tobola@gmail.com>\n"
 "Language-Team: \n"
@@ -171,10 +171,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -9893,6 +9889,14 @@ msgstr "Tuvalu"
 msgid "Two"
 msgstr "Dva"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Dva riadky"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Dva riadky a nasledujúci program"
+
 msgid "Type"
 msgstr "Typ"
 
@@ -12081,14 +12085,6 @@ msgstr "turistika/cestovanie"
 
 msgid "true"
 msgstr "áno"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Dva riadky"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Dva riadky a nasledujúci program"
 
 msgid "type"
 msgstr "typ"
