--- a/po/sl.po
+++ b/po/sl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Project Slovenia\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2020-05-16 18:48+0200\n"
 "Last-Translator: Taykun345 <support@satnigmo.com>\n"
 "Language-Team: Satnigmo <support@satnigmo.com>\n"
@@ -183,10 +183,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -11565,6 +11561,16 @@ msgid "Two"
 msgstr "Dva"
 
 #
+#, fuzzy
+msgid "Two lines"
+msgstr "Prikaz info. vrstice"
+
+#
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Pojdi na naslednji dogodek"
+
+#
 msgid "Type"
 msgstr "Vrsta"
 
@@ -14062,16 +14068,6 @@ msgstr ""
 
 msgid "true"
 msgstr "pravilno"
-
-#
-#, fuzzy
-msgid "two lines"
-msgstr "Prikaz info. vrstice"
-
-#
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Pojdi na naslednji dogodek"
 
 #, fuzzy
 msgid "type"
