--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2017-03-05 13:24+0100\n"
 "Last-Translator: Magnus Nilsson <mag_nilsson@hotmail.com>\n"
 "Language-Team: \n"
@@ -182,10 +182,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -11350,6 +11346,15 @@ msgid "Two"
 msgstr "Två"
 
 #
+#, fuzzy
+msgid "Two lines"
+msgstr "Visa Infolinje"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Gå till nästa program"
+
+#
 msgid "Type"
 msgstr "Typ"
 
@@ -13850,15 +13855,6 @@ msgstr "turism / resor"
 
 msgid "true"
 msgstr "sann"
-
-#
-#, fuzzy
-msgid "two lines"
-msgstr "Visa Infolinje"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Gå till nästa program"
 
 #, fuzzy
 msgid "type"
