--- a/po/th.po
+++ b/po/th.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1-En-Th\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2010-04-08 18:13+0700\n"
 "Last-Translator: Tony - Thaidreambox\n"
 "Language-Team: Tony @ Thai Dreambox <tonyboyth@gmail.com>\n"
@@ -172,10 +172,6 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
-msgstr ""
-
-#, python-format
-msgid "%d"
 msgstr ""
 
 #, python-format
@@ -10278,6 +10274,14 @@ msgstr ""
 msgid "Two"
 msgstr "สอง"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "แสดง Infoline"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "ย้ายลงไป"
+
 msgid "Type"
 msgstr "ประเภท"
 
@@ -12487,14 +12491,6 @@ msgstr ""
 
 msgid "true"
 msgstr ""
-
-#, fuzzy
-msgid "two lines"
-msgstr "แสดง Infoline"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "ย้ายลงไป"
 
 #, fuzzy
 msgid "type"
