--- a/po/tr.po
+++ b/po/tr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OPENPLi\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2015-12-18 21:05+0200\n"
 "Last-Translator: Yetkin AYDIN <yetkina@gmail.com>\n"
 "Language-Team: http://www.hurforum.com <yetkina@gmail.com>\n"
@@ -178,10 +178,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -10124,6 +10120,14 @@ msgstr ""
 msgid "Two"
 msgstr "İki"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Bilgi satırı göster"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Sonraki olaya git"
+
 msgid "Type"
 msgstr "Tip"
 
@@ -12370,14 +12374,6 @@ msgstr "Turizm/Seyahat"
 
 msgid "true"
 msgstr "Doğru"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Bilgi satırı göster"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Sonraki olaya git"
 
 #, fuzzy
 msgid "type"
