--- a/po/uk.po
+++ b/po/uk.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2022-09-27 16:12+0200\n"
 "Last-Translator: kvinto\n"
 "Language-Team: kvinto\n"
@@ -169,10 +169,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -9890,6 +9886,14 @@ msgstr "Тувалу"
 msgid "Two"
 msgstr "Два"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Два рядки"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Два рядки і наступна передача"
+
 msgid "Type"
 msgstr "Тип"
 
@@ -12080,14 +12084,6 @@ msgstr "туризм/подорожі"
 
 msgid "true"
 msgstr "правдивий"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Два рядки"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Два рядки і наступна передача"
 
 msgid "type"
 msgstr "тип"
