--- a/po/vi.po
+++ b/po/vi.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma 2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2021-08-02 09:19+0700\n"
 "Last-Translator: krong\n"
 "Language-Team: none\n"
@@ -169,10 +169,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -9904,6 +9900,14 @@ msgstr "Tuvalu"
 msgid "Two"
 msgstr "Hai"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Hai dòng"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Hai dòng và sự kiện tiếp theo"
+
 msgid "Type"
 msgstr "Kiểu"
 
@@ -12117,14 +12121,6 @@ msgstr "du lịch / du lịch"
 
 msgid "true"
 msgstr "thật"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Hai dòng"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Hai dòng và sự kiện tiếp theo"
 
 msgid "type"
 msgstr "kiểu"
