--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2021-07-31 17:00+0800\n"
 "Last-Translator: 孤独之剑 <haotzyy1970@yahoo.com>\n"
 "Language-Team: 孤独之剑 <haotzyy1970@yahoo.com>\n"
@@ -170,10 +170,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -9922,6 +9918,14 @@ msgstr "图瓦卢"
 msgid "Two"
 msgstr "二"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "双行模式"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "两行和下一个事件"
+
 msgid "Type"
 msgstr "类型"
 
@@ -12138,14 +12142,6 @@ msgstr "旅游/旅行"
 
 msgid "true"
 msgstr "正确"
-
-#, fuzzy
-msgid "two lines"
-msgstr "双行模式"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "两行和下一个事件"
 
 msgid "type"
 msgstr "类型"
