--- a/po/ca.po
+++ b/po/ca.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2022-10-13 18:38+0200\n"
 "Last-Translator: Oriol Pellicer <oriol@elsud.org>\n"
 "Language-Team: angelodos angelo2807@hotmail.com\n"
@@ -184,10 +184,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -11022,6 +11018,14 @@ msgstr "Tuvalu"
 msgid "Two"
 msgstr "Dos"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Dues línies"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Dues línies i proper esdeveniment"
+
 #
 msgid "Type"
 msgstr "Tipus"
@@ -13438,14 +13442,6 @@ msgstr "turisme / viatges"
 
 msgid "true"
 msgstr "cert"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Dues línies"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Dues línies i proper esdeveniment"
 
 #
 msgid "type"
