--- a/po/is.po
+++ b/po/is.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2020-05-16 18:44+0200\n"
 "Last-Translator: Baldur <bsveinsson@gmail.com>\n"
 "Language-Team: Polar Team/LT Team <baddi@oreind.is>\n"
@@ -178,10 +178,6 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
-msgstr ""
-
-#, python-format
-msgid "%d"
 msgstr ""
 
 #, python-format
@@ -11288,6 +11284,16 @@ msgid "Two"
 msgstr "Tveir"
 
 #
+#, fuzzy
+msgid "Two lines"
+msgstr "sýna upplýsingalínu"
+
+#
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "fara niður í næsta atriði"
+
+#
 msgid "Type"
 msgstr "Gerð"
 
@@ -13722,16 +13728,6 @@ msgstr ""
 
 msgid "true"
 msgstr ""
-
-#
-#, fuzzy
-msgid "two lines"
-msgstr "sýna upplýsingalínu"
-
-#
-#, fuzzy
-msgid "two lines+next event"
-msgstr "fara niður í næsta atriði"
 
 #
 #, fuzzy
