--- a/po/sr.po
+++ b/po/sr.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: 2011-04-14 00:02+0200\n"
 "Last-Translator: majevica <jovanovic@gmx.ch>\n"
 "Language-Team: veselin & majevica CRNABERZA <jovanovic@gmx.ch>\n"
@@ -181,10 +181,6 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
-msgstr ""
-
-#, python-format
-msgid "%d"
 msgstr ""
 
 #, python-format
@@ -11619,6 +11615,16 @@ msgid "Two"
 msgstr "Dva"
 
 #
+#, fuzzy
+msgid "Two lines"
+msgstr "Pokaži Info liniju "
+
+#
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Pomeri dole na naredni unos"
+
+#
 msgid "Type"
 msgstr "Tip"
 
@@ -14083,16 +14089,6 @@ msgstr ""
 
 msgid "true"
 msgstr ""
-
-#
-#, fuzzy
-msgid "two lines"
-msgstr "Pokaži Info liniju "
-
-#
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Pomeri dole na naredni unos"
 
 #
 #, fuzzy
